0about/aboutstyle.css
/* ... */
#n{
  font-size:2.55vw;
  transition:0.27s;
  opacity: 25%;


}
#u{
  font-size:2.55vw;
  transition:0.12s;
  opacity: 35%;

}

#a{
  font-size:2.55vw;
  transition:0.27s;
  opacity: 45%;

}
#n2{
  font-size:2.55vw;
  transition:0.27s;
  opacity: 55%;

}
#c2{
  font-size:2.55vw;
  transition:0.27s;
  opacity: 65%;

}
#e2{
  font-size:2.55vw;
  transition:0.27s;
  opacity: 75%;

}
#s{
  font-size:2.55vw;
  transition:0.27s;
  opacity: 85%;

}


#e{
  font-size:2.55vw;
  -webkit-transition: .27s;
  -webkit-moz-transition: .27s;
  -o-transition: .27s;
  transition: .27s;
}
#e:hover{
 font-size: 4.5vw;

}
#c{
  font-size:2.55vw;
  -webkit-transition: .12s;
  -webkit-moz-transition: .12s;
  -o-transition: .12s;
  transition: .12s;
}
#c:hover{
 font-size: 4.5vw;

}

#h{
  font-size:2.55vw;
  -webkit-transition: .27s;
  -webkit-moz-transition: .27s;
  -o-transition: .27s;
  transition: .27s;
}
#h:hover{
 font-size: 4.5vw;

}
#o{
  font-size:2.55vw;
  -webkit-transition: .27s;
  -webkit-moz-transition: .27s;
  -o-transition: .27s;
  transition: .27s;
}
#o:hover{
 font-size: 4.5vw;

}





.lista {

  display:inline-flex;
}

#connections {
  list-style: none;
  animation: loading 3s linear infinite;
}

@keyframes loading {
  0% {
    transform: translateX(-0.2vw);
    letter-spacing: 0.6vw;
    opacity: 0;
  }

  10% {
    opacity: 1;
  }

  50% {
    letter-spacing: -0.6vw;
    opacity: 1;
  }

  100% {
    transform: translateX(3vw);
    letter-spacing: 0.6vw;
    opacity: 0;
  }
}

#connections:nth-child(1) {
  animation-delay: 0s;
}

#connections:nth-child(2) {
  animation-delay: .2s;
}

#connections:nth-child(3) {
  animation-delay: .4s;
}

#connections:nth-child(4) {
  animation-delay: .6s;
}

#connections:nth-child(5) {
  animation-delay: .8s;
}

#connections:nth-child(6) {
  animation-delay: 1s;
}

#connections:nth-child(7) {
  animation-delay: 1.2s;
}

/* protocols----------------------------------------- */

.parent {
  position:relative;
  width: 84vw;
  height: 100vw;
  margin-left:8vw;
  margin-right: 8vw;
}

.video1 {
  position: absolute;
  top: 12vh;
}

.video1 video {
  position: absolute;
  width: 40vw;
}

.p1 {
  position: absolute;
  top: 10vh;
  left: 52%;
  width: 40vw;
  font-size: 2.55vw;
}

.video2 {
  position: absolute;
  top: 50vw;
}

.video2 img {
  position: absolute;
  width: 40vw;
}

.p2 {
  position: absolute;
  top: 47vw;
  left: 52%;
  width: 40vw;
  font-size: 2.55vw;
}

#protImg {
  width: 40vw;
  transition: 0.4s;
  transform-origin: bottom left;
}

#protImg:hover {
  bottom: 0%;
  left: 0%;
  margin-left: 0px;
  transform: scale(2.4);
}

.image3 {
  top: 95vw;
  position: relative;
}

.p3 {
  position: absolute;
  top: 92vw;
  left: 52%;
  width: 40vw;
  font-size: 2.55vw;
}

.rect{
  width: 84vw;
  height: 1px;
  top: 8.5vh;
 margin-left:-52vw;
  background-color: black;
}

.pspecial1 {
  position: absolute;
  top: 10vh;
  left: 52%;
  width: 40vw;
  font-size: 2.55vw;
}

.videospecial1 {
  position: absolute;
  top: 12vh;
}

.videospecial1 video {
  position: absolute;
  width: 40vw;
}

.pspecial2 {
  position: absolute;
  top: 41vw;
  left: 52%;
  width: 40vw;
  font-size: 2.55vw;
}

.videospecial2 {
  position: absolute;
  top: 43vw;
}

.videospecial2 img {
  position: absolute;
  width: 40vw;
}

.pspecial3 {
  position: absolute;
  top: 78vw;
  left: 52%;
  width: 40vw;
  font-size: 2.55vw;
}

.imag3{
  width:40vw;
  position:relative;
  top: 80vw;
}




/*---------------------------------------------------- PROTOCOL2*/
.genitore {
  margin-top:12vw;
  margin-left:8vw;
  margin-right:8vw;;
  position:relative;
  width: 84vw;
  height: 100vw;
}
.title {
  font-size: 2vh;
  font-weight: normal;
  position: absolute;
  top: 2vh;
  left: 52vw;

}

#protImg2 {
  width: 40vw;
  transition: 0.4s;
  transform-origin: bottom left;
}

#protImg2:hover {
  bottom: 0%;
  left: 0%;
  margin-left: 0px;
  transform: scale(2.);
}





/*---------------------------------------------------- PROTOCOL3*/

.padre{
  margin-top:16vw;
  position:relative;
  width: 84vw;
  height: 100vw;
  margin-left:8vw;
  margin-right: 8vw;
}

.ima3{
  width:40vw;
  position:relative;
  top: 95vw;
}


#protImg3 {
  width: 40vw;
  transition: 0.4s;
  transform-origin: bottom left;
}

#protImg3:hover {
  bottom: 0%;
  left: 0%;
  margin-left: 0px;
  transform: scale(2.4);
}

/* ------------------------------------------------------------------------------------ */
.creditsBox {
  top: 100vw;
  height: 200vw;
}

#self {
    margin-left:8vw;
    margin-top: 6vh;
    margin-bottom: 0;
    font-family: input-mono;
    font-size: 2.55vw;
    font-weight:normal;
}

.primogenitore{
    margin:5vw;
    margin-top: 0vw;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
    transform: translateY(-4%);
    margin-bottom: 10vw;
}
.primegif{
    width:100%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
   margin-left:3vw;
}

.secondegif{
    width:100%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.identity{
   margin-top:2vh;
   margin-bottom:3vh;
}

.identity2{
 margin-left:10vw;
 margin-top:2vh;
 margin-bottom: 3vh;
 }

 .identity3{
    margin-left:10.5vw;
    margin-top:2vh;
    margin-bottom: 3vh;
    }

.gifleti {
    margin-top: 6vh;
    width:18vw;
    margin-left:1.8vw;
}

#distanza{
    margin-top:2.5vh;
    font-size: 1.8vh;
}
#leti{
    font-weight: bold;
    font-size: 3vh;
    margin-left:1.8vw;
}
#primaleti {
    background-color: #7fe2a9;

}


.gifauro {
    margin-top: 6vh;
    width:18vw;
}

#auro{
    font-weight: bold;
    font-size: 3vh;
}

#primaauro{
background-color: #67a2f9;
}

.gifmarti {
    margin-top: 10vh;
    width:19vw;
   margin-bottom:-6.5vh;
   margin-right: 1vw;
}


#marti{
    font-weight: bold;
    font-size: 3vh;
    margin-right: 1vw;
}

#primamarti{
    background-color: #ffc5e5;
}
/* ... */

